# apps/api/docs/swagger.json
@@ -89,7 +89,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "books"
+                    "costs"
                 ],
                 "summary": "Create new cost",
                 "parameters": [
@@ -229,15 +229,6 @@
                         "name": "X-User-ID",
                         "in": "header",
                         "required": true
-                    },
-                    {
-                        "description": "Get book list with user_id",
-                        "name": "book",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/validators.GetBookListRequest"
-                        }
                     }
                 ],
                 "responses": {
@@ -305,13 +296,11 @@
                         "required": true
                     },
                     {
+                        "type": "string",
                         "description": "Get book with book_id",
-                        "name": "book",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/validators.GetBookByIDRequest"
-                        }
+                        "name": "book_id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -327,6 +316,78 @@
                                     "properties": {
                                         "data": {
                                             "$ref": "#/definitions/models.BookModel"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    },
+                    "400": {
+                        "description": "bad request",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIResponse"
+                        }
+                    },
+                    "404": {
+                        "description": "not found",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/utils.APIResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/book/{book_id}/cost/list": {
+            "get": {
+                "description": "get cost list by book_id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "costs"
+                ],
+                "summary": "Get cost list",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID for authentication",
+                        "name": "X-User-ID",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Book ID",
+                        "name": "book_id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "success",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/utils.APIResponse"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/definitions/models.CostRecordModel"
+                                            }
                                         }
                                     }
                                 }
@@ -430,13 +491,6 @@
                         "description": "User ID for authentication",
                         "name": "X-User-ID",
                         "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "User ID",
-                        "name": "id",
-                        "in": "path",
                         "required": true
                     }
                 ],
@@ -563,6 +617,32 @@
                     "type": "string"
                 },
                 "last_modified_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.CostRecordModel": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "type": "number"
+                },
+                "book_id": {
+                    "type": "string"
+                },
+                "created_at": {
+                    "type": "string"
+                },
+                "creator_id": {
+                    "type": "string"
+                },
+                "currency": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "id": {
                     "type": "string"
                 }
             }
@@ -731,28 +811,6 @@
                 "name": {
                     "type": "string",
                     "minLength": 1
-                }
-            }
-        },
-        "validators.GetBookByIDRequest": {
-            "type": "object",
-            "required": [
-                "bookID"
-            ],
-            "properties": {
-                "bookID": {
-                    "type": "string"
-                }
-            }
-        },
-        "validators.GetBookListRequest": {
-            "type": "object",
-            "required": [
-                "id"
-            ],
-            "properties": {
-                "id": {
-                    "type": "string"
                 }
             }
         },
