# apps/api/routers/book.go
@@ -15,4 +15,5 @@ func BookRegister(router *gin.RouterGroup) {
 
 	// cost
 	router.POST("/book/cost", controllers.CreateNewCost)
+	router.GET("/book/:book_id/cost/list", controllers.GetCostList)
 }
